--- a/test/index.html
+++ b/test/index.html
@@ -27,7 +27,9 @@
 	<script>
 		//load parameters from URL
 		var opts = EstLib.loadURLParameters();
+		opts.width = "1000";
 		opts.scale = "60M";
+		opts.nutsLvl = "3";
 		opts.type = "ps";
 
 		//make map with generic function
