--- a/test/index.html
+++ b/test/index.html
@@ -14,9 +14,9 @@
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jsonstat@0.13.3/json-stat.js"></script>
-<script src="../js/lib.js"></script>
-<script src="../js/eurostat-lib.js"></script>
-<script src="../js/eurostat-map.js"></script>
+<script src="https://rawgit.com/eurostat/eurostat.js/master/js/lib.js"></script>
+<script src="https://rawgit.com/eurostat/eurostat.js/master/js/eurostat-lib.js"></script>
+<script src="https://rawgit.com/eurostat/eurostat.js/master/js/eurostat-map.js"></script>
 
 </head>
 
