--- a/test/index.html
+++ b/test/index.html
@@ -32,7 +32,7 @@
 		opts.scale = "60M";
 		opts.unitText = "unit";
 
-		opts.bckFillColor = "#bbb";
+		//opts.bckFillColor = "#bbb";
 		opts.drawCoastalMargin = false;
 
 		//opts.type = "ps";
