--- a/test/index.html
+++ b/test/index.html
@@ -34,7 +34,8 @@
 		.ebcode("demo_r_d3dens").dimensions({ time : 2016 })
 		//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 		.unitText("unit")
-		.clnb(100)
+		.clnb(10)
+		.classToFillStyle(EstLib.getColorLegend(10))
 		.drawCoastalMargin(false)
 		//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun(10, {shape:"circle"}))
 		//.classToFillStyle(EstLib.getFillPatternLegend(10))
