--- a/test/index.html
+++ b/test/index.html
@@ -35,10 +35,9 @@
 		//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 		.unitText("unit")
 		.clnb(10)
-		.classToFillStyle(EstLib.getColorLegend(10))
 		.drawCoastalMargin(false)
 		//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun(10, {shape:"circle"}))
-		//.classToFillStyle(EstLib.getFillPatternLegend(10))
+		//.classToFillStyle(EstLib.getFillPatternLegend())
 		//.type("ps")
 		.build();
 
