--- a/test/index.html
+++ b/test/index.html
@@ -31,12 +31,13 @@
 
 		EstLib.map()
 		.scale("60M")
+		.nutsLvl(3)
 		.ebcode("demo_r_d3dens").dimensions({ time : 2016 })
 		//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 		.unitText("unit")
 		.clnb(10)
 		.drawCoastalMargin(false)
-		//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun(10, {shape:"circle"}))
+		//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun(10, { patternSize: 5, shape: "circle", bckColor: "white", symbColor: "red" } ))
 		//.classToFillStyle(EstLib.getFillPatternLegend())
 		//.type("ps")
 		.build();
