--- a/test/index.html
+++ b/test/index.html
@@ -36,9 +36,9 @@
 		//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 		.unitText("unit")
 		.clnb(10)
-		.drawCoastalMargin(false)
-		//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun(10, { patternSize: 5, shape: "circle", bckColor: "white", symbColor: "red" } ))
-		//.classToFillStyle(EstLib.getFillPatternLegend())
+		.drawCoastalMargin(true)
+		.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun(10, { patternSize: 5, shape: "circle", bckColor: "white", symbColor: "red" } ))
+		.classToFillStyle(EstLib.getFillPatternLegend())
 		//.type("ps")
 		.build();
 
