--- a/test/index.html
+++ b/test/index.html
@@ -32,14 +32,14 @@
 		EstLib.map()
 		.scale("60M")
 		.nutsLvl(3)
-		.ebcode("demo_r_d3dens").dimensions({ time : 2016 })
-		//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
+		//.ebcode("demo_r_d3dens").dimensions({ time : 2016 })
+		.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 		.unitText("unit")
 		.clnb(10)
 		.drawCoastalMargin(true)
-		.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun(10, { patternSize: 5, shape: "circle", bckColor: "white", symbColor: "red" } ))
-		.classToFillStyle(EstLib.getFillPatternLegend())
-		//.type("ps")
+		//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun(10, { patternSize: 5, shape: "circle", bckColor: "white", symbColor: "red" } ))
+		//.classToFillStyle(EstLib.getFillPatternLegend())
+		.type("ps")
 		.build();
 
 		</script>
