--- a/test/index.html
+++ b/test/index.html
@@ -20,22 +20,20 @@
 
 	//load parameters from URL
 	var opts = EstLib.loadURLParameters();
-	opts.time = opts.time || 2016;
-	
 
 	EstLib.map()
-	.set(opts)
 	//.scale("60M")
 	//.nutsLvl(3)
-	.ebcode("demo_r_d3dens").dimensions({ time : opts.time })
+	.ebcode("demo_r_d3dens").dimensions({ time : opts.time || 2016 })
 	//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	.unitText("unit")
 	//.colorFun(d3.interpolateGnBu)
 	//.clnb(12)
 	//.drawCoastalMargin(true)
-	.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, shape: "circle", bckColor: "white", symbColor: "red" } ))
-	.classToFillStyle(EstLib.getFillPatternLegend())
+	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, shape: "circle", bckColor: "white", symbColor: "red" } ))
+	//.classToFillStyle(EstLib.getFillPatternLegend())
 	//.type("ps")
+	.set(opts)
 	.build();
 
 </script>
