--- a/test/index.html
+++ b/test/index.html
@@ -29,8 +29,8 @@
 	//.colorFun(d3.interpolateGnBu)
 	//.clnb(3)
 	//.drawCoastalMargin(true)
-	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, shape: "circle", bckColor: "white", symbColor: "red" } ))
-	//.classToFillStyle(EstLib.getFillPatternLegend())
+	.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 4, shape: "circle", bckColor: "white", symbColor: "black" } ))
+	.classToFillStyle(EstLib.getFillPatternLegend())
 	//.type("ps")
 	.set(opts)
 	.build();
