--- a/test/index.html
+++ b/test/index.html
@@ -8,12 +8,12 @@
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jsonstat@0.13.3/json-stat.js"></script>
+<script src="../js/eurostat-tooltip.js"></script>
 <script src="../js/lib.js"></script>
 <script src="../js/eurostat-lib.js"></script>
 <script src="../js/eurostat-map.js"></script>
 
 <svg id="map"></svg>
-<div id="tooltip"></div>
 
 <script>
 
