--- a/test/index.html
+++ b/test/index.html
@@ -20,15 +20,16 @@
 	var opts = EstLib.loadURLParameters();
 
 	EstLib.map()
-	//.scale("60M")
-	//.nutsLvl(3)
+	.scale("60M")
+	.nutsLvl(3)
+	.width(1000)
 	.ebcode("demo_r_d3dens").dimensions({ time : opts.time || 2016 })
 	//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	.unitText("unit")
 	//.colorFun(d3.interpolateGnBu)
-	//.clnb(3)
-	//.drawCoastalMargin(true)
-	.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 4, shape: "circle", bckColor: "white", symbColor: "black" } ))
+	.clnb(30)
+	.drawCoastalMargin(false)
+	.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	.classToFillStyle(EstLib.getFillPatternLegend())
 	//.type("ps")
 	.set(opts)
