--- a/test/index.html
+++ b/test/index.html
@@ -27,9 +27,9 @@
 	//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	.unitText("unit")
 	//.colorFun(d3.interpolateGnBu)
-	.clnb(30)
+	.clnb(15)
 	.drawCoastalMargin(false)
-	.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, shape: "circle", bckColor: "white", symbColor: "black" } ))
+	.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	.classToFillStyle(EstLib.getFillPatternLegend())
 	//.type("ps")
 	.set(opts)
