--- a/test/index.html
+++ b/test/index.html
@@ -17,7 +17,7 @@
 <script>
 
 	//load parameters from URL
-	var opts = EstLib.loadURLParameters();
+	var opts = EstLib.getURLParameters();
 
 	EstLib.map()
 	.scale("60M")
