--- a/test/index.html
+++ b/test/index.html
@@ -7,6 +7,7 @@
 <script src="https://d3js.org/d3-color.v1.min.js"></script>
 <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/2.25.6/d3-legend.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/jsonstat@0.13.3/json-stat.js"></script>
 <script src="../js/eurostat-tooltip.js"></script>
 <script src="../js/eurostat-lib.js"></script>
@@ -23,15 +24,15 @@
 	.scale("60M")
 	.nutsLvl(3)
 	.width(1000)
-	//.ebcode("demo_r_d3dens").dimensions({ time : opts.time || 2016 })
-	.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
+	.ebcode("demo_r_d3dens").dimensions({ time : opts.time || 2016 })
+	//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	.unitText("unit")
 	//.colorFun(d3.interpolateGnBu)
 	.clnb(15)
 	.drawCoastalMargin(false)
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
-	.type("ps")
+	//.type("ps")
 	.set(opts)
 	.build();
 
