--- a/test/index.html
+++ b/test/index.html
@@ -30,8 +30,8 @@
 	//.colorFun(d3.interpolateGnBu)
 	.clnb(10)
 	.drawCoastalMargin(false)
-	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
-	//.classToFillStyle(EstLib.getFillPatternLegend())
+	.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
+	.classToFillStyle(EstLib.getFillPatternLegend())
 	//.type("ps")
 	.set(opts)
 	.build();
