--- a/test/index.html
+++ b/test/index.html
@@ -30,6 +30,7 @@
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
 	//.type("ps")
+	.legendBoxHeight(250)
 	.set(opts)
 	.build();
 
