--- a/test/index.html
+++ b/test/index.html
@@ -30,7 +30,7 @@
 	.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	.classToFillStyle(EstLib.getFillPatternLegend())
 	.type("ps")
-	//.legendBoxHeight(250)
+	.legendBoxHeight(250)
 	//.legendBoxWidth(200)
 	.legendLabelWrap(200)
 	.set(opts)
