min size for proportional circles

--- a/test/index.html
+++ b/test/index.html
@@ -31,7 +31,7 @@
 	.classToFillStyle(EstLib.getFillPatternLegend())
 	.type("ps")
 	.legendBoxHeight(250)
-	//.legendBoxWidth(200)
+	.legendBoxWidth(200)
 	.legendLabelWrap(200)
 	.set(opts)
 	.build();
