--- a/test/index.html
+++ b/test/index.html
@@ -33,8 +33,8 @@
 	.legendBoxHeight(250)
 	.legendBoxWidth(200)
 	.legendLabelWrap(200)
-	.classMeth("threshold") //quantile equinter threshold
-	.threshold([40,75,130,300,1400])
+	.classifMethod("equinter") //quantile equinter threshold
+	//.threshold([40,75,130,300,1400])
 	.legendLabelDecNb(0)
 	.set(opts)
 	.build();
