--- a/test/index.html
+++ b/test/index.html
@@ -25,7 +25,7 @@
 	//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	.unitText("unit")
 	//.colorFun(d3.interpolateGnBu)
-	.clnb(10)
+	.clnb(7)
 	.drawCoastalMargin(false)
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
@@ -33,8 +33,8 @@
 	.legendBoxHeight(250)
 	.legendBoxWidth(200)
 	.legendLabelWrap(200)
-	.classifMethod("equinter") //quantile equinter threshold
-	//.threshold([40,75,130,300,1400])
+	.classifMethod("threshold") //quantile equinter threshold
+	.threshold([50,75,100,150,300,850])
 	.legendLabelDecNb(0)
 	.set(opts)
 	.build();
