--- a/test/index.html
+++ b/test/index.html
@@ -20,22 +20,25 @@
 	EstLib.map()
 	.scale("60M")
 	.nutsLvl(3)
-	.width(1000)
-	.datasetCode("demo_r_d3dens").filters( opts.time? { time : opts.time } : { lastTimePeriod:1 } )
-	//.ebcode("demo_r_pjangrp3").dimensions({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
-	.unitText("unit")
+	//.width(1000)
+	//.datasetCode("demo_r_d3dens").filters( opts.time? { time : opts.time } : { lastTimePeriod:1 } )
+	//.datasetCode("demo_r_pjangrp3").filters({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
+	//.datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
+	.datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
+	//.unitText("unit")
 	//.colorFun(d3.interpolateGnBu)
 	.clnb(7)
 	.drawCoastalMargin(false)
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
-	//.type("ps")
-	.legendBoxHeight(250)
-	.legendBoxWidth(200)
-	.legendLabelWrap(200)
-	.classifMethod("threshold") //quantile equinter threshold
-	.threshold([50,75,100,150,300,850])
-	.legendLabelDecNb(0)
+	.type("ps")
+	.psMaxSize(50)
+	//.legendBoxHeight(250)
+	//.legendBoxWidth(200)
+	//.legendLabelWrap(200)
+	//.classifMethod("threshold") //quantile equinter threshold
+	//.threshold([50,75,100,150,300,850])
+	//.legendLabelDecNb(0)
 	.set(opts)
 	.build();
 
