--- a/test/index.html
+++ b/test/index.html
@@ -21,23 +21,25 @@
 	.scale("60M")
 	.width(1000)
 
-	//.nutsLvl(3).datasetCode("demo_r_d3dens").filters( opts.time? { time : opts.time } : { lastTimePeriod:1 } )
+	.nutsLvl(3).datasetCode("demo_r_d3dens").filters( opts.time? { time : opts.time } : { lastTimePeriod:1 } )
 	//.nutsLvl(3).datasetCode("demo_r_pjangrp3").filters({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
-	.nutsLvl(3).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
+	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
 	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters( { unit:"PC", lastTimePeriod:1, sex:"T", age:"Y_GE15" } )
 
 	//.unitText("unit")
 	//.colorFun(d3.interpolateGnBu)
 	.clnb(9)
-	//.seaFillStyle("white")
+	.cntrgFillStyle("white")
+	.seaFillStyle("#e9e9e9")
 	//.drawCoastalMargin(false)
-	//.coastalMarginStdDev(6)
-	//.coastalMarginWidth(12)
-	//.coastalMarginColor("#bbb")
+	.coastalMarginStdDev(10)
+	.coastalMarginWidth(5)
+	.coastalMarginColor("#777")
+	.nutsbnStroke( {0:"#777", 1:"#777", 2:"#777", 3:"#777", oth:"#444", co:"#777"} )
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
-	.type("ps")
+	//.type("ps")
 	//.psMaxSize(50)
 	//.legendBoxHeight(250)
 	//.legendBoxWidth(200)
