--- a/test/index.html
+++ b/test/index.html
@@ -21,7 +21,7 @@
 	.scale("60M")
 	.width(1000)
 
-	.nutsLvl(3).datasetCode("demo_r_d3dens").filters( opts.time? { time : opts.time } : { lastTimePeriod:1 } )
+	.nutsLvl(3).datasetCode("demo_r_d3dens")
 	//.nutsLvl(3).datasetCode("demo_r_pjangrp3").filters({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
 	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
@@ -29,14 +29,14 @@
 
 	//.unitText("unit")
 	//.colorFun(d3.interpolateGnBu)
-	.clnb(9)
-	.cntrgFillStyle("white")
-	.seaFillStyle("#e9e9e9")
+	//.clnb(9)
+	//.cntrgFillStyle("white")
+	//.seaFillStyle("#e9e9e9")
 	//.drawCoastalMargin(false)
-	.coastalMarginStdDev(10)
-	.coastalMarginWidth(5)
-	.coastalMarginColor("#777")
-	.nutsbnStroke( {0:"#777", 1:"#777", 2:"#777", 3:"#777", oth:"#444", co:"#777"} )
+	//.coastalMarginStdDev(10)
+	//.coastalMarginWidth(5)
+	//.coastalMarginColor("#777")
+	//.nutsbnStroke( {0:"#777", 1:"#777", 2:"#777", 3:"#777", oth:"#444", co:"#777"} )
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
 	//.type("ps")
@@ -44,9 +44,9 @@
 	//.legendBoxHeight(250)
 	//.legendBoxWidth(200)
 	//.legendLabelWrap(200)
-	//.classifMethod("threshold") //quantile equinter threshold
-	//.threshold([30,50,75,100,150,300,850,1500])
-	//.legendLabelDecNb(0)
+	.classifMethod("threshold") //quantile equinter threshold
+	.threshold([30,50,75,100,150,300,850,1500])
+	.legendLabelDecNb(0)
 	.set(opts)
 	.build();
 
