--- a/test/index.html
+++ b/test/index.html
@@ -21,15 +21,15 @@
 	.scale("60M")
 	.width(1000)
 
-	.nutsLvl(3).datasetCode("demo_r_d3dens")
+	//.nutsLvl(3).datasetCode("demo_r_d3dens")
+	.nutsLvl(3).datasetCode("demo_r_gind3").filters({ indic_de:"GROWRT", time : 2016 })
+	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters({ age:"Y_GE15",sex:"T",unit:"PC", time : 2017 })
 	//.nutsLvl(3).datasetCode("demo_r_pjangrp3").filters({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
 	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
 	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters( { unit:"PC", lastTimePeriod:1, sex:"T", age:"Y_GE15" } )
 
 	//.unitText("unit")
-	//.colorFun(d3.interpolateGnBu)
-	//.clnb(9)
 	//.cntrgFillStyle("white")
 	//.seaFillStyle("#e9e9e9")
 	//.drawCoastalMargin(false)
@@ -37,6 +37,8 @@
 	//.coastalMarginWidth(5)
 	//.coastalMarginColor("#777")
 	//.nutsbnStroke( {0:"#777", 1:"#777", 2:"#777", 3:"#777", oth:"#444", co:"#777"} )
+	//.clnb(10)
+	.colorFun(d3.interpolateRdYlGn) //d3.interpolateGnBu)
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
 	//.type("ps")
@@ -45,8 +47,9 @@
 	//.legendBoxWidth(200)
 	//.legendLabelWrap(200)
 	.classifMethod("threshold") //quantile equinter threshold
-	.threshold([30,50,75,100,150,300,850,1500])
+	.threshold([-15,-10,-6,-4,-2,0,2,4,6,10,15])
 	.legendLabelDecNb(0)
+	.legendLabelDelimiter("to")
 	.set(opts)
 	.build();
 
