--- a/test/index.html
+++ b/test/index.html
@@ -22,12 +22,13 @@
 	.width(1000)
 
 	//.nutsLvl(3).datasetCode("demo_r_d3dens")
-	.nutsLvl(3).datasetCode("demo_r_gind3").filters({ indic_de:"GROWRT", time : 2016 })
+	//.nutsLvl(3).datasetCode("demo_r_gind3").filters({ indic_de:"GROWRT", time : 2016 })
 	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters({ age:"Y_GE15",sex:"T",unit:"PC", time : 2017 })
 	//.nutsLvl(3).datasetCode("demo_r_pjangrp3").filters({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
 	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
 	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters( { unit:"PC", lastTimePeriod:1, sex:"T", age:"Y_GE15" } )
+	.nutsLvl(3).csvDataSource("urb_rur_typo.csv")
 
 	//.unitText("unit")
 	//.cntrgFillStyle("white")
