--- a/test/index.html
+++ b/test/index.html
@@ -28,7 +28,7 @@
 	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
 	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
 	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters( { unit:"PC", lastTimePeriod:1, sex:"T", age:"Y_GE15" } )
-	.nutsLvl(3).csvDataSource("urb_rur_typo.csv")
+	.nutsLvl(3).csvDataSource({url:"https://raw.githubusercontent.com/eurostat/eurostat.js/master/data/urb_rur_typo.csv",geokey:"NUTS_ID_2013",valuekey:"urban_rural"})
 
 	//.unitText("unit")
 	//.cntrgFillStyle("white")
@@ -39,7 +39,7 @@
 	//.coastalMarginColor("#777")
 	//.nutsbnStroke( {0:"#777", 1:"#777", 2:"#777", 3:"#777", oth:"#444", co:"#777"} )
 	//.clnb(10)
-	.colorFun(d3.interpolateRdYlGn) //d3.interpolateGnBu)
+	//.colorFun(d3.interpolateRdYlGn) //d3.interpolateGnBu)
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
 	//.type("ps")
@@ -47,8 +47,8 @@
 	//.legendBoxHeight(250)
 	//.legendBoxWidth(200)
 	//.legendLabelWrap(200)
-	.classifMethod("threshold") //quantile equinter threshold
-	.threshold([-15,-10,-6,-4,-2,0,2,4,6,10,15])
+	//.classifMethod("threshold") //quantile equinter threshold
+	//.threshold([-15,-10,-6,-4,-2,0,2,4,6,10,15])
 	.legendLabelDecNb(0)
 	.legendLabelDelimiter("to")
 	.set(opts)
