--- a/test/index.html
+++ b/test/index.html
@@ -38,7 +38,7 @@
 	//.coastalMarginWidth(5)
 	//.coastalMarginColor("#777")
 	//.nutsbnStroke( {0:"#777", 1:"#777", 2:"#777", 3:"#777", oth:"#444", co:"#777"} )
-	//.clnb(10)
+	.clnb(4)
 	//.colorFun(d3.interpolateRdYlGn) //d3.interpolateGnBu)
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
@@ -49,7 +49,7 @@
 	//.legendLabelWrap(200)
 	//.classifMethod("threshold") //quantile equinter threshold
 	//.threshold([-15,-10,-6,-4,-2,0,2,4,6,10,15])
-	.legendLabelDecNb(0)
+	//.legendLabelDecNb(0)
 	.legendLabelDelimiter("to")
 	.set(opts)
 	.build();
