--- a/test/index.html
+++ b/test/index.html
@@ -28,7 +28,7 @@
 	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
 	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
 	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters( { unit:"PC", lastTimePeriod:1, sex:"T", age:"Y_GE15" } )
-	.nutsLvl(3).csvDataSource({url:"https://raw.githubusercontent.com/eurostat/eurostat.js/master/data/urb_rur_typo.csv",geokey:"NUTS_ID_2013",valuekey:"urban_rural"})
+	.nutsLvl(3).csvDataSource({url:"https://raw.githubusercontent.com/eurostat/eurostat.js/master/data/urb_rur_typo.csv",geoCol:"NUTS_ID_2013",valueCol:"urban_rural"})
 
 	//.unitText("unit")
 	//.cntrgFillStyle("white")
