--- a/test/index.html
+++ b/test/index.html
@@ -42,7 +42,7 @@
 	//.colorFun(d3.interpolateRdYlGn) //d3.interpolateGnBu)
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
-	//.type("ps")
+	.type("ct")
 	//.psMaxSize(50)
 	//.legendBoxHeight(250)
 	//.legendBoxWidth(200)
