--- a/test/index.html
+++ b/test/index.html
@@ -38,10 +38,13 @@
 	//.coastalMarginWidth(5)
 	//.coastalMarginColor("#777")
 	//.nutsbnStroke( {0:"#777", 1:"#777", 2:"#777", 3:"#777", oth:"#444", co:"#777"} )
-	.clnb(4)
+	//.clnb(4)
 	//.colorFun(d3.interpolateRdYlGn) //d3.interpolateGnBu)
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
+	//.classToFillStyle(function(ecl){ return ecl==1?d3.schemeCategory10[3]:ecl==2?d3.schemeCategory10[1]:d3.schemeCategory10[2]; })
+	.classToFillStyleCT( { "1":d3.schemeCategory10[3], "2":d3.schemeCategory10[1], "3":d3.schemeCategory10[2] } )
+	.classToText( { "1":"Urban", "2":"Rural", "3":"Intermediate" } )
 	.type("ct")
 	//.psMaxSize(50)
 	//.legendBoxHeight(250)
