--- a/test/index.html
+++ b/test/index.html
@@ -43,7 +43,7 @@
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
 	//.classToFillStyle(EstLib.getFillPatternLegend())
 	//.classToFillStyle(function(ecl){ return ecl==1?d3.schemeCategory10[3]:ecl==2?d3.schemeCategory10[1]:d3.schemeCategory10[2]; })
-	//.classToFillStyleCT( { "1":d3.schemeCategory10[3], "2":d3.schemeCategory10[1], "3":d3.schemeCategory10[2] } )
+	.classToFillStyleCT( { "1":d3.schemeCategory10[3], "2":d3.schemeCategory10[1], "3":d3.schemeCategory10[2] } )
 	.classToFillStyleCT( { "1":d3.schemeSet3[3], "2":d3.schemeSet3[5], "3":d3.schemeSet3[6] } )
 	.classToText( { "1":"Urban", "2":"Intermediate", "3":"Rural" } )
 	.type("ct")
