--- a/test/index.html
+++ b/test/index.html
@@ -28,7 +28,7 @@
 	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
 	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
 	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters( { unit:"PC", lastTimePeriod:1, sex:"T", age:"Y_GE15" } )
-	.nutsLvl(3).csvDataSource({url:"https://raw.githubusercontent.com/eurostat/eurostat.js/master/data/urb_rur_typo_.csv",geoCol:"NUTS_ID_2013",valueCol:"urban_rural"})
+	.nutsLvl(3).csvDataSource({url:"https://raw.githubusercontent.com/eurostat/eurostat.js/master/data/urb_rur_typo.csv",geoCol:"NUTS_ID_2013",valueCol:"urban_rural"})
 
 	//.unitText("unit")
 	//.cntrgFillStyle("white")
@@ -41,11 +41,14 @@
 	//.clnb(4)
 	//.colorFun(d3.interpolateRdYlGn) //d3.interpolateGnBu)
 	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
-	//.classToFillStyle(EstLib.getFillPatternLegend())
-	//.classToFillStyle(function(ecl){ return ecl==1?d3.schemeCategory10[3]:ecl==2?d3.schemeCategory10[1]:d3.schemeCategory10[2]; })
-	.classToFillStyleCT( { "urb":d3.schemeCategory10[3], "int":d3.schemeCategory10[1], "rur":d3.schemeCategory10[2] } )
-	.classToFillStyleCT( { "urb":d3.schemeSet3[3], "int":d3.schemeSet3[5], "rur":d3.schemeSet3[6] } )
-	.classToText( { "urb":"Urban", "int":"Intermediate", "rur":"Rural" } )
+	//.classToFillStyleCH(EstLib.getFillPatternLegend())
+	//.classToFillStyleCH(function(ecl){ return ecl==1?d3.schemeCategory10[3]:ecl==2?d3.schemeCategory10[1]:d3.schemeCategory10[2]; })
+	.classToFillStyleCT( { "1":d3.schemeCategory10[3], "2":d3.schemeCategory10[1], "3":d3.schemeCategory10[2] } )
+	.classToFillStyleCT( { "1":d3.schemeSet3[3], "2":d3.schemeSet3[5], "3":d3.schemeSet3[6] } )
+	//.classToText( { "1":"Urban", "2":"Intermediate", "3":"Rural" } )
+	//.classToFillStyleCT( { "urb":d3.schemeCategory10[3], "int":d3.schemeCategory10[1], "rur":d3.schemeCategory10[2] } )
+	//.classToFillStyleCT( { "urb":d3.schemeSet3[3], "int":d3.schemeSet3[5], "rur":d3.schemeSet3[6] } )
+	//.classToText( { "urb":"Urban", "int":"Intermediate", "rur":"Rural" } )
 	.type("ct")
 	//.psMaxSize(50)
 	//.legendBoxHeight(250)
@@ -54,7 +57,7 @@
 	//.classifMethod("threshold") //quantile equinter threshold
 	//.threshold([-15,-10,-6,-4,-2,0,2,4,6,10,15])
 	//.legendLabelDecNb(0)
-	.legendLabelDelimiter("to")
+	//.legendLabelDelimiter("to")
 	.set(opts)
 	.build();
 
