flag support in tooltips

--- a/test/index.html
+++ b/test/index.html
@@ -21,10 +21,10 @@
 	.scale("60M")
 	.width(1000)
 
-	.nutsLvl(3).datasetCode("demo_r_d3dens")
+	//.nutsLvl(3).datasetCode("demo_r_d3dens")
 	//.nutsLvl(3).datasetCode("demo_r_gind3").filters({ indic_de:"GROWRT", time : 2016 })
 	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters({ age:"Y_GE15",sex:"T",unit:"PC", time : 2017 })
-	//.nutsLvl(3).datasetCode("demo_r_pjangrp3").filters({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
+	.nutsLvl(3).datasetCode("demo_r_pjangrp3").filters({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
 	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
 	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
 	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters( { unit:"PC", lastTimePeriod:1, sex:"T", age:"Y_GE15" } )
@@ -45,14 +45,14 @@
 	//.classToFillStyleCH(function(ecl){ return ecl==1?d3.schemeCategory10[3]:ecl==2?d3.schemeCategory10[1]:d3.schemeCategory10[2]; })
 	//.classToFillStyleCT( { "urb":d3.schemeSet3[3], "int":d3.schemeSet3[5], "rur":d3.schemeSet3[6] } )
 	//.classToText( { "urb":"Urban", "int":"Intermediate", "rur":"Rural" } )
-	//.type("ct")
+	.type("ps")
 	//.psMaxSize(50)
 	//.legendBoxHeight(250)
 	//.legendBoxWidth(200)
 	//.legendLabelWrap(200)
-	.classifMethod("threshold") //quantile equinter threshold
+	//.classifMethod("threshold") //quantile equinter threshold
 	//.threshold([-15,-10,-6,-4,-2,0,2,4,6,10,15])
-	.threshold([50,75,100,150,300,850])
+	//.threshold([50,75,100,150,300,850])
 	//.legendLabelDecNb(0)
 	//.legendLabelDelimiter("to")
 	.set(opts)
