--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,6 +6,6 @@
   <script src="dist/main.js"></script>
 </head>
 <body>
-  <h1>Hello from HTML!</h1>
+  <h1>Test</h1>
 </body>
 </html>
