--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>JavaScript Example</title>
-  <script src="dist/main.js"></script>
+  <script src="dist/eurostat.js"></script>
 </head>
 <body>
   <h1>Test</h1>
@@ -11,6 +11,8 @@
   <script>
 
 EstLib.test("kgdkjgh");
+console.log(EstLib)
+//console.log(EstLib.getEstatRestDataURLBase)
 
   </script>
   
