--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
   <script src="dist/eurostat.js"></script>
   <script>
 
-console.log(EstLib)
-EstLib.test("kgdkjgh");
+console.log(EstLib);
+console.log(EstLib.sum(1,1));
+//EstLib.test("kgdkjgh");
 //console.log(EstLib.getEstatRestDataURLBase)
 
   </script>
