--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 console.log(EstLib);
 console.log(EstLib.sum(1,1));
-//EstLib.test("kgdkjgh");
+console.log(sum(1,1));
+console.log(product(2,2));
+EstLib.log("hi!");
 //console.log(EstLib.getEstatRestDataURLBase)
 
   </script>
