--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <script src="dist/eurostat.js"></script>
   <script>
 
-console.log(EstLib);
-console.log(EstLib.test.sum(1,1));
-console.log(EstLib.test.product(3,2));
-EstLib.test.log("hi!");
-console.log(EstLib.base.getEstatRestDataURLBase)
+//console.log(EstLib);
+//console.log(EstLib.test.sum(1,1));
+//console.log(EstLib.test.product(3,2));
+//EstLib.test.log("hi!");
+//console.log(EstLib.base.getEstatRestDataURLBase)
 
 EstLib.map.get()
 	.width(900)
