--- a/index.html
+++ b/index.html
@@ -12,28 +12,50 @@
 	<script src="dist/eurostat.js"></script>
 	<script>
 
-		//console.log(EstLib);
-		//console.log(EstLib.test.sum(1,1));
-		//console.log(EstLib.test.product(3,2));
-		//EstLib.test.log("hi!");
-		//console.log(EstLib.base.getEstatRestDataURLBase)
+	//load parameters from URL
+	var opts = EstLib.base.getURLParameters();
 
-		EstLib.map.get()
-			.width(900)
-			.scale("20M")
-			.NUTSyear(2016)
-			.datasetCode("demo_r_d3dens")
-			.classifMethod("threshold").threshold([50, 75, 100, 150, 300, 850])
+	EstLib.map.get()
+	.scale("60M")
+	.width(1000)
+	.NUTSyear(2016) //TODO change default year to 2016 !!!
 
-			.unitText("people/km²")
-			.tooltipShowFlags(false)
+	.nutsLvl(3).datasetCode("demo_r_d3dens")
+	//.nutsLvl(3).datasetCode("demo_r_gind3").filters({ indic_de:"GROWRT", time : 2016 })
+	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters({ age:"Y_GE15",sex:"T",unit:"PC", time : 2017 })
+	//.nutsLvl(3).datasetCode("demo_r_pjangrp3").filters({ age:"TOTAL",sex:"T",unit:"NR", time : 2016 })
+	//.nutsLvl(3).datasetCode("ilc_li41").filters( { unit:"PC", time:2015 } )
+	//.nutsLvl(2).datasetCode("crim_gen_reg").filters( { unit:"NR", time:2010, iccs:"ICCS0101" } )
+	//.nutsLvl(2).datasetCode("lfst_r_lfu3rt").filters( { unit:"PC", lastTimePeriod:1, sex:"T", age:"Y_GE15" } )
+	//.nutsLvl(3).csvDataSource({url:"https://raw.githubusercontent.com/eurostat/eurostat.js/master/data/urb_rur_typo.csv",geoCol:"NUTS_ID_2013",valueCol:"urban_rural"})
 
-			.legendTitleText("Population density (people/km²)")
-			.legendLabelDecNb(0)
-			.legendBoxHeight(210)
-			.legendBoxWidth(190)
-
-			.build();
+	//.unitText("unit")
+	//.cntrgFillStyle("white")
+	//.seaFillStyle("#e9e9e9")
+	//.drawCoastalMargin(false)
+	//.coastalMarginStdDev(10)
+	//.coastalMarginWidth(5)
+	//.coastalMarginColor("#777")
+	//.nutsbnStroke( {0:"#777", 1:"#777", 2:"#777", 3:"#777", oth:"#444", co:"#777"} )
+	//.clnb(4)
+	//.colorFun(d3.interpolateRdYlGn) //d3.interpolateGnBu)
+	//.filtersDefinitionFun(EstLib.getFillPatternDefinitionFun({ patternSize: 5, minSize: 1, maxSize: 5.5, shape: "circle", bckColor: "white", symbColor: "black" } ))
+	//.classToFillStyleCH(EstLib.getFillPatternLegend())
+	//.classToFillStyleCH(function(ecl){ return ecl==1?d3.schemeCategory10[3]:ecl==2?d3.schemeCategory10[1]:d3.schemeCategory10[2]; })
+	//.classToFillStyleCT( { "urb":d3.schemeSet3[3], "int":d3.schemeSet3[5], "rur":d3.schemeSet3[6] } )
+	//.classToText( { "urb":"Urban", "int":"Intermediate", "rur":"Rural" } )
+	//.type("ct")
+	//.psMaxSize(50)
+	//.legendBoxHeight(250)
+	//.legendBoxWidth(200)
+	//.legendLabelWrap(200)
+	//.classifMethod("threshold") //quantile equinter threshold
+	//.threshold([-15,-10,-6,-4,-2,0,2,4,6,10,15])
+	//.threshold([50,75,100,150,300,850])
+	//.legendLabelDecNb(0)
+	//.legendLabelDelimiter("to")
+	.set(opts)
+	.build();
 
 	</script>
 
