--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 	var opts = EstLib.base.getURLParameters();
 
 	EstLib.map.get()
-	//.scale("60M")
-	//.width(1000)
+	//.showLegend(false)
+	//.scaleExtent([1,2])
+	.scale("60M")
+	.width(600)
 
 	//.nutsLvl(3).datasetCode("demo_r_d3dens")
 	//.nutsLvl(3).datasetCode("demo_r_gind3").filters({ indic_de:"GROWRT", time : 2016 })
